--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    If you ever use any of the code for your project, please give credit to @PleaseUninstall
-	    </footer>
+If you ever use this code in any of your projects, please credit the creator: @PleaseUninstall	   
+		</footer>
 	</body>
 </html>
 
